# first-mart-on-mars

./: compose.yaml
product/app/: main.py  product.proto  product_pb2.py
services/order_service/: pyproject.toml
services/product_service/: Dockerfile.dev  pyproject.toml
services/product_service/product_service/: main.py
user_auth/: Dockerfile.dev
