[tool.poetry]
name = "product-service"
version = "0.1.0"
description = ""
authors = ["= <syed.muhammad.ashhar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
aiokafka = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
